--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
+    "seaborn>=0.13.2",
     "tqdm>=4.67.1",
 ]
